--- a/.prow.yaml
+++ b/.prow.yaml
@@ -42,6 +42,7 @@ presubmits:
             - --git-user=rustin-bot
             - --git-email=liudongpo@pingcap.com
             - --git-user-from-github=false
+            - --git-token-path=/etc/github/token
           volumeMounts:
             - name: github-token
               mountPath: /etc/github
