--- a/.prow.yaml
+++ b/.prow.yaml
@@ -29,7 +29,7 @@ presubmits:
       - ^master$
     spec:
       containers:
-        - image: rustinliu/rerere-test:latest
+        - image: rustinliu/rerere-component:latest
           command:
             - rerere
           args:
