ci: test rerere

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -41,6 +41,10 @@ presubmits:
             - --require-contexts=hello
             - --labels=status/can-merge
             - --retesting-branch=try
+            - --git-user=rustin-bot
+            - --git-email=liudongpo@pingcap.com
+            - --git-user-from-github=false
+            - --git-token-path=/etc/github/token
           volumeMounts:
             - name: github-token
               mountPath: /etc/github
