ci: add terminationGracePeriodSeconds: 3m

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -30,6 +30,7 @@ presubmits:
     branches:
       - ^master$
     spec:
+      terminationGracePeriodSeconds: 3m
       containers:
         - image: rustinliu/rerere-test:latest
           command:
