--- a/.prow.yaml
+++ b/.prow.yaml
@@ -30,7 +30,7 @@ presubmits:
     branches:
       - ^master$
     spec:
-      terminationGracePeriodSeconds: 3m
+      terminationGracePeriodSeconds: 180
       containers:
         - image: rustinliu/rerere-test:latest
           command:
