--- a/.prow.yaml
+++ b/.prow.yaml
@@ -24,8 +24,8 @@ presubmits:
             secretName: github-token
   - name: pull-test-dev-push
     decorate: true
-    trigger: "(?mi)^/merge\\s*$"
-    rerun_command: "/merge"
+    always_run: true
+    rerun_command: "/rerere"
     max_concurrency: 1
     branches:
       - ^master$
