ci: add trigger

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -25,6 +25,8 @@ presubmits:
   - name: pull-test-dev-push
     decorate: true
     always_run: true
+    trigger: "(?mi)^/merge\\s*$"
+    rerun_command: "/merge"
     max_concurrency: 1
     branches:
       - ^master$
