--- a/.prow.yaml
+++ b/.prow.yaml
@@ -22,35 +22,35 @@ presubmits:
         - name: github-token
           secret:
             secretName: github-token
-  - name: pull-test-dev-rerere
-    decorate: true
-    always_run: true
-    trigger: "(?mi)^/(merge|rerere)\\s*$"
-    rerun_command: "/rerere"
-    max_concurrency: 1
-    branches:
-      - ^master$
-    spec:
-      containers:
-        - image: rustinliu/rerere-test:latest
-          command:
-            - rerere
-          args:
-            - --github-token-path=/etc/github/token
-            - --dry-run=false
-            - --github-endpoint=https://api.github.com
-            - --require-contexts=hello
-            - --labels=status/can-merge
-            - --retesting-branch=try
-            - --git-user=rustin-bot
-            - --git-email=liudongpo@pingcap.com
-            - --git-user-from-github=false
-            - --git-token-path=/etc/github/token
-          volumeMounts:
-            - name: github-token
-              mountPath: /etc/github
-              readOnly: true
-      volumes:
-        - name: github-token
-          secret:
-            secretName: github-token
+#  - name: pull-test-dev-rerere
+#    decorate: true
+#    always_run: true
+#    trigger: "(?mi)^/(merge|rerere)\\s*$"
+#    rerun_command: "/rerere"
+#    max_concurrency: 1
+#    branches:
+#      - ^master$
+#    spec:
+#      containers:
+#        - image: rustinliu/rerere-test:latest
+#          command:
+#            - rerere
+#          args:
+#            - --github-token-path=/etc/github/token
+#            - --dry-run=false
+#            - --github-endpoint=https://api.github.com
+#            - --require-contexts=hello
+#            - --labels=status/can-merge
+#            - --retesting-branch=try
+#            - --git-user=rustin-bot
+#            - --git-email=liudongpo@pingcap.com
+#            - --git-user-from-github=false
+#            - --git-token-path=/etc/github/token
+#          volumeMounts:
+#            - name: github-token
+#              mountPath: /etc/github
+#              readOnly: true
+#      volumes:
+#        - name: github-token
+#          secret:
+#            secretName: github-token
