--- a/.prow.yaml
+++ b/.prow.yaml
@@ -25,7 +25,7 @@ presubmits:
   - name: pull-test-dev-rerere
     decorate: true
     always_run: true
-    trigger: "(?mi)^/rerere\\s*$"
+    trigger: "(?mi)^/(merge|rerere)\\s*$"
     rerun_command: "/rerere"
     max_concurrency: 1
     branches:
